This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.openpty() failure on Solaris 10: PermissionError: [Errno 13] Permission denied
Type: Stage:
Components: Versions: Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: python-dev, trent, vstinner
Priority: normal Keywords:

Created on 2013-11-24 12:48 by vstinner, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (4)
msg204207 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-11-24 12:48
It looks like a regression was introduced in Python 3.4 (the test pass on Python 3.3). It may be related to the PEP 446 (non inheritable file descriptors).

http://buildbot.python.org/all/builders/SPARC Solaris 10 (cc%2C 32b) [SB] 3.x/builds/1574/steps/test/logs/stdio 

======================================================================
ERROR: test (test.test_openpty.OpenptyTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/cpython/buildslave/cc-32/3.x.snakebite-sol10-sparc-cc-32/build/Lib/test/test_openpty.py", line 12, in test
    master, slave = os.openpty()
PermissionError: [Errno 13] Permission denied
msg204208 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-11-24 12:49
And also:

======================================================================
ERROR: test_openpty (test.test_os.FDInheritanceTests)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/cpython/buildslave/cc-32/3.x.snakebite-sol10-sparc-cc-32/build/Lib/test/test_os.py", line 2455, in test_openpty
    master_fd, slave_fd = os.openpty()
PermissionError: [Errno 13] Permission denied
msg204428 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-11-25 22:20
New changeset 63c1fbc4de4b by Victor Stinner in branch 'default':
Issue #19752: Fix "HAVE_DEV_PTMX" implementation of os.openpty()
http://hg.python.org/cpython/rev/63c1fbc4de4b
msg204430 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-11-25 22:22
Thanks to the Snakebite, I was able to connect to Solaris 10 to reproduce and fix the issue. Thank you Trent!
History
Date User Action Args
2022-04-11 14:57:54adminsetgithub: 63951
2013-11-25 22:22:18vstinnersetstatus: open -> closed

nosy: + trent
messages: + msg204430

resolution: fixed
2013-11-25 22:20:15python-devsetnosy: + python-dev
messages: + msg204428
2013-11-24 12:49:46vstinnersetmessages: + msg204208
title: test_os failure on Solaris 10 -> os.openpty() failure on Solaris 10: PermissionError: [Errno 13] Permission denied
2013-11-24 12:48:55vstinnercreate